--- a/style.css
+++ b/style.css
@@ -9,6 +9,12 @@ h1
 #wrapper
 {
   text-align:center;
-  margin:0 auto;
-  width:100%;
+  margin:auto;
+  width:100px;
+  height:100px;
+  position: absolute;
+  top:0;
+  bottom: 0;
+  left: 0;
+  right: 0;
 }
