--- a/style.css
+++ b/style.css
@@ -11,9 +11,11 @@ h1
   text-align:center;
   margin:auto;
   width:500px;
+  height:500px;
   position: absolute;
   top:0;
   bottom: 0;
   left: 0;
   right: 0;
+  line-height: 500px;
 }
